--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@
                 </p>
                 <p>Blockchain Explorer:</p>
                 <p><a href="https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C" style="word-break: break-word; color: #e3e3e3;">https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C</a></p>
-                <div class="btnContainer" style="display:flex;align-items: center;justify-content: space-evenly;flex-wrap: wrap; margin: 1rem 0 0;">
+                <div class="btnContainer">
                     <!-- <div class="buttonsCta">
                         <button class="btnCta" onclick="toICO()"><span></span>
                             <p data-start="Get Ready..." data-text="Invest" data-title="Buy Aarya"></p>
