Update Use Cases

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>Aarya can be used as a secure and fast payment method by businesses and individuals, allowing for quick and efficient transactions.</p>
          </div> 
          <div class="ucCard" id="uc3">
-            <p> Aarya emphasizes user privacy and security, offering privacy-focused transactions that protect sensitive financial information.</p>
+            <p> Aarya is going to launch its exclusive NFT collection which can be bought with ARY and will help in community building</p>
          </div> 
          <div class="ucCard" id="uc4">
             <p>Aarya can facilitate cross-border transactions, providing a fast and secure payment method that is not subject to traditional banking regulations.</p>
