--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                 <p>Blockchain Explorer:</p>
                 <p><a href="https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C" style="word-break: break-word; color: #e3e3e3;">https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C</a></p>
                 <div class="btnContainer">
-                        <button class="btnPrimary"><a href="https://aarya-ico.netlify.app"></a>Buy Aarya</a></button>
+                        <button class="btnPrimary" onclick="toICO()"><a href="https://aarya-ico.netlify.app"></a>Buy Aarya</a></button>
 
-                        <button class="btnPrimary"><a href="https://xeggex.com/market/ARY_USDT"></a>Trade Aarya</a></button>
+                        <button class="btnPrimary" onclick="toTrade()"><a href="https://xeggex.com/market/ARY_USDT"></a>Trade Aarya</a></button>
                     
                         <button class="btnSecondary" id="btnDesktop" onclick="addToWallet()">Add To Desktop</button>
                   
