--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
     <link rel="stylesheet" href="css/welcome.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="css/community.min.css">
     <link rel="stylesheet" href="css/featuresCard.css">
     <!-- <script defer src="js/anime.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
