--- a/community.html
+++ b/community.html
@@ -150,7 +150,7 @@
   <div class="main-container">
   <nav class="nav">
       <div class="nav-bg"></div>
-      <div class="logo"><a href="index.html"><h1 id="mheading">AARYA</h1></a></div>
+      <div class="logo"><a href="/"><h1 id="mheading">AARYA</h1></a></div>
       <!-- <div class="links">
 
           <span><a href="index.html">Home</a></span>
