--- a/community.html
+++ b/community.html
@@ -189,28 +189,40 @@
 
       <h2>What we do?</h2>
       <div class="work-card" id="work-card-1">
-        <div class="heading"><h5>Child Education</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p></div>
+        <div class="work-card-content">
+          <div class="heading"><h5>Child Education</h5></div>
+          <div class="card-text"><p>Empowering young minds through quality education and creating a brighter future for the next generation.</p></div>
+        </div>
       </div>
       <div class="work-card" id="work-card-2">
-        <div class="heading"><h5>Food Donation</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p></div>
+        <div class="work-card-content">
+          <div class="heading"><h5>Food Distribution</h5></div>
+          <div class="card-text"><p>Providing nutritious meals to those in need, ensuring no one goes hungry in our community.</p></div>
+        </div>
       </div>
       <div class="work-card" id="work-card-3">
-        <div class="heading"><h5>Natural Calamity</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p></div>
+        <div class="work-card-content">
+          <div class="heading"><h5>Planting Trees</h5></div>
+          <div class="card-text"><p>Promoting environmental sustainability by planting trees and preserving our natural surroundings for a greener future.</p></div>
+        </div>
       </div>
       <div class="work-card" id="work-card-4">
-        <div class="heading"><h5>Helping the Homeless</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p></div>
+        <div class="work-card-content">
+          <div class="heading"><h5>Blood Donation</h5></div>
+          <div class="card-text"><p>Saving lives through voluntary blood donation, making a difference one drop at a time.</p></div>
+        </div>
       </div>
        <div class="work-card" id="work-card-5">
-        <div class="heading"><h5>Planting Trees</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p></div>
+        <div class="work-card-content">
+          <div class="heading"><h5>Women Empowerment</h5></div>
+          <div class="card-text"><p>Supporting and empowering women to reach their full potential and promoting gender equality.</p></div>
+        </div>
       </div>
      <div class="work-card" id="work-card-6">
-        <div class="heading"><h5>Child Education</h5></div>
-        <div class="card-text"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, temporibus eius deserunt beatae fuga consequatur!</p>
+      <div class="work-card-content">
+        <div class="heading"><h5>Relief Support</h5></div>
+        <div class="card-text"><p>Extending support and relief to communities affected by natural disasters, helping them rebuild and recover.</p></div>
+      </div>
         </div> 
      </div>
 
@@ -275,7 +287,7 @@
   </footer>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous" async></script>
+<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
     <script type="text/javascript" src="js/stories.js"></script>
 
@@ -391,26 +403,6 @@
     <!-- <script src="js/nav.js"></script> -->
     <!-- <script src="js/roadmap.js"></script> -->
 
-    <script>
-        var swiper = new Swiper(".swiper-container", {
-      effect: "coverflow",
-      grabCursor: true,
-      centeredSlides: true,
-      slidesPerView: 1,
-      coverflowEffect: {
-        rotate: 0,
-        stretch: 0,
-        depth: 100,
-        modifier: 2,
-        slideShadows: true,
-      },
-      breakpoints:{
-        1025:{
-            slidesPerView: 1,
-        }
-      },
-    });
-    </script>
 
 </body>
 
