--- a/community.html
+++ b/community.html
@@ -187,45 +187,48 @@
   </section>
   <section class="our-work">
 
-      <h2>What we do?</h2>
-      <div class="work-card" id="work-card-1">
-        <div class="work-card-content">
-          <div class="heading"><h5>Child Education</h5></div>
-          <div class="card-text"><p>Empowering young minds through quality education and creating a brighter future for the next generation.</p></div>
+    
+    <div class="work-card-grid">
+        <h2>What we do?</h2>
+        <div class="work-card" id="work-card-1">
+          <div class="work-card-content">
+            <div class="heading"><h5>Child Education</h5></div>
+            <div class="card-text"><p>Empowering young minds through quality education and creating a brighter future for the next generation.</p></div>
+          </div>
         </div>
-      </div>
-      <div class="work-card" id="work-card-2">
-        <div class="work-card-content">
-          <div class="heading"><h5>Food Distribution</h5></div>
-          <div class="card-text"><p>Providing nutritious meals to those in need, ensuring no one goes hungry in our community.</p></div>
+        <div class="work-card" id="work-card-2">
+          <div class="work-card-content">
+            <div class="heading"><h5>Food Distribution</h5></div>
+            <div class="card-text"><p>Providing nutritious meals to those in need, ensuring no one goes hungry in our community.</p></div>
+          </div>
         </div>
-      </div>
-      <div class="work-card" id="work-card-3">
-        <div class="work-card-content">
-          <div class="heading"><h5>Planting Trees</h5></div>
-          <div class="card-text"><p>Promoting environmental sustainability by planting trees and preserving our natural surroundings for a greener future.</p></div>
+        <div class="work-card" id="work-card-3">
+          <div class="work-card-content">
+            <div class="heading"><h5>Planting Trees</h5></div>
+            <div class="card-text"><p>Promoting environmental sustainability by planting trees and preserving our natural surroundings for a greener future.</p></div>
+          </div>
         </div>
-      </div>
-      <div class="work-card" id="work-card-4">
-        <div class="work-card-content">
-          <div class="heading"><h5>Blood Donation</h5></div>
-          <div class="card-text"><p>Saving lives through voluntary blood donation, making a difference one drop at a time.</p></div>
+        <div class="work-card" id="work-card-4">
+          <div class="work-card-content">
+            <div class="heading"><h5>Blood Donation</h5></div>
+            <div class="card-text"><p>Saving lives through voluntary blood donation, making a difference one drop at a time.</p></div>
+          </div>
         </div>
-      </div>
-       <div class="work-card" id="work-card-5">
-        <div class="work-card-content">
-          <div class="heading"><h5>Women Empowerment</h5></div>
-          <div class="card-text"><p>Supporting and empowering women to reach their full potential and promoting gender equality.</p></div>
+         <div class="work-card" id="work-card-5">
+          <div class="work-card-content">
+            <div class="heading"><h5>Women Empowerment</h5></div>
+            <div class="card-text"><p>Supporting and empowering women to reach their full potential and promoting gender equality.</p></div>
+          </div>
         </div>
+       <div class="work-card" id="work-card-6">
+        <div class="work-card-content">
+          <div class="heading"><h5>Relief Support</h5></div>
+          <div class="card-text"><p>Extending support and relief to communities affected by natural disasters, helping them rebuild and recover.</p></div>
+        </div>
+        </div>        
       </div>
-     <div class="work-card" id="work-card-6">
-      <div class="work-card-content">
-        <div class="heading"><h5>Relief Support</h5></div>
-        <div class="card-text"><p>Extending support and relief to communities affected by natural disasters, helping them rebuild and recover.</p></div>
-      </div>
-        </div> 
-     </div>
 
+    
   </section>
   <section class="current-work lozad" data-background-image="https://static.vecteezy.com/system/resources/previews/015/452/755/large_2x/abstract-background-horizontal-wave-lines-design-and-pattern-on-black-background-and-texture-free-vector.jpg">
     <div class="heading"><h2>Biparjoy Cyclone</h2></div>
