--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-<meta name="keywords" content="Aarya network, Aarya(ARY), ARY, Aarya, Project Aarya, Crypto, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
+    <meta name="keywords" content="Aarya network, Aarya(ARY), ARY, Aarya, Project Aarya, Crypto, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
 
-<meta name="description" content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
+    <meta name="description" content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
     
     <title>Aarya (ARY)</title>
     <link rel="canonical" href="https://aarya.network">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="manifest" href="images/site.webmanifest">
-    <link rel="stylesheet" href="css/welcome.css">
     <script defer src="js/anime.js"></script>
     <script defer src="js/welcome.js"></script>
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/featuresCard.css">
+    <link rel="stylesheet" href="css/nav.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/featuresCard.min.css">
     <link rel="preload" fetchpriority="high" as="image" href="images/transparent1/11.webp" type="image/webp">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/a81f64a541.js" crossorigin="anonymous" defer></script>
