Update Welcome Screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="manifest" href="images/site.webmanifest">
     <script defer src="js/anime.js"></script>
     <script defer src="js/welcome.js"></script>
+
+    <link rel="stylesheet" href="css/welcome.min.css">
     <link rel="stylesheet" href="css/nav.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/featuresCard.min.css">
