--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="logo"><a href="#"><h1 id="mheading">AARYA</h1></a></div>
         <div class="links">
             
-            <span><a href="community.html">Community</a></span>
+            <span><a href="community">Community</a></span>
             <span><a href="#about">About</a></span>
             <span><a href="#usecase">Use Case</a></span>
             <span><a href="#roadmap">Roadmap</a></span>
