--- a/community.html
+++ b/community.html
@@ -177,7 +177,7 @@
     <p>
       Aarya is more than just a crypto token. It's a movement driven by a greater purpose. Our mission is to serve the community with nobility, fostering a culture of compassion, and positive change. We believe that collective action has the power to transform lives and build a better world. Together, we can turn our actions into a force for good.</p>
   </section>
-  <section class="bondedSection lozad" data-background-image="https://img.freepik.com/free-vector/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.jpg?w=1060&t=st=1689334002~exp=1689334602~hmac=41f504f11cba23e0d2254aa34bd4681d411048af6754a22ceed73d6f81041723">
+  <section class="bondedSection lozad" data-background-image="https://marketplace.canva.com/HwC3c/MAErSwHwC3c/1/s2/canva-tiny-white-dust-particles-on-black-background-MAErSwHwC3c.jpg">
     <!-- https://w0.peakpx.com/wallpaper/340/862/HD-wallpaper-windows-11-darker-microsoft-opera-windows-11-windows-computer-stock-microsoft.jpg -->
     <section class="our-work">    
       <div class="work-text-wrapper">
