--- a/community.html
+++ b/community.html
@@ -10,12 +10,12 @@
   <meta http-equiv="Expires" content="0" />
   <meta name="keywords"
     content="Aarya network, Aarya(ARY), ARY, Aarya, Project Aarya, Crypto, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
-
+  <meta name="robots" content="index, follow">
   <meta name="description"
     content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
 
-  <title>Aarya (ARY)</title>
-  <link rel="canonical" href="https://aarya.network">
+  <title>Aarya Community</title>
+  <link rel="canonical" href="https://aarya.network/community">
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
