Update Community Styling

--- a/community.html
+++ b/community.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="images/site.webmanifest">
   <link rel="stylesheet" href="css/welcome.css">
-  <link rel="stylesheet" href="css/community.test.css">
+  <link rel="stylesheet" href="css/community.min.css">
   <link rel="stylesheet" href="css/featuresCard.css">
   <!-- <script defer src="js/anime.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
@@ -207,7 +207,7 @@
         <div class="work-card-wrapper">
           <div class="swiper-container">
             <div class="swiper-wrapper">
-              <div class="swiper-slide work-card" id="work-card-1">
+              <div class="swiper-slide work-card lozad" id="work-card-1" data-background-image="https://cdn.pixabay.com/photo/2015/07/28/22/05/child-865116_1280.jpg">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Child Education</h5>
@@ -218,7 +218,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide work-card" id="work-card-2">
+              <div class="swiper-slide work-card lozad" data-background-image="https://images.unsplash.com/photo-1593113646773-028c64a8f1b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" id="work-card-2">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Food Distribution</h5>
@@ -228,7 +228,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide work-card" id="work-card-3">
+              <div class="swiper-slide work-card lozad" data-background-image="https://cdn.pixabay.com/photo/2020/05/31/04/36/investment-5241253_1280.jpg" id="work-card-3">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Planting Trees</h5>
@@ -239,7 +239,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide work-card" id="work-card-4">
+              <div class="swiper-slide work-card lozad" data-background-image="https://images.unsplash.com/photo-1536856136534-bb679c52a9aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" id="work-card-4">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Blood Donation</h5>
@@ -249,7 +249,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide work-card" id="work-card-5">
+              <div class="swiper-slide work-card lozad" data-background-image="https://images.pexels.com/photos/8447849/pexels-photo-8447849.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" id="work-card-5">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Women Empowerment</h5>
@@ -259,7 +259,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide work-card" id="work-card-6">
+              <div class="swiper-slide work-card lozad" data-background-image="https://feeds.abplive.com/onecms/images/uploaded-images/2023/01/10/6ff39e745960f1866d3ed28ad5f4bcee1673323824525369_original.jpg?impolicy=abp_cdn&imwidth=720" id="work-card-6">
                 <div class="work-card-content">
                   <div class="heading">
                     <h5>Relief Support</h5>
