--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <script defer src="js/welcome.js"></script>
     <link rel="stylesheet" href="css/welcome.min.css">
     <link rel="stylesheet" href="css/nav.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css" async>
+    <!-- <link rel="preload" href="css/style.min.css" as="style"> -->
     <link rel="stylesheet" href="css/featuresCard.min.css">
     <link rel="preload" fetchpriority="high" as="image" href="images/transparent1/11.webp" type="image/webp">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
