--- a/index.html
+++ b/index.html
@@ -465,8 +465,9 @@
             <button class="accordion">How can I buy Aarya?</button>
             <div class="accordion-content">
                 <p>
-                    Aarya is going to be listed on DEXs like Uniswap and will soon conduct an ICO and Airdrops. Join the
-                    Aarya Community on Instagram and Twitter to stay tuned for latest updates.
+                    You can get Aarya directly from <a href="https://aarya-ico.netlify.app">Aarya ICO</a>. Aarya is also listed on a XeggeX and can be bought and traded there. It is soon to be listed on DEXs like Uniswap.
+                    <br>
+                    Join the Aarya Community on Instagram and Twitter to stay tuned for latest updates.
                 </p>
             </div>
 
