--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     /> -->
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B491L0Y23W"></script>
+<script async defer src="https://www.googletagmanager.com/gtag/js?id=G-B491L0Y23W"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
