--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ html {scroll-behavior: smooth;}@font-face{font-family:Blanka;src:url('https://aa
     /> -->
 </head>
 <!-- Google tag (gtag.js) -->
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-B491L0Y23W" defer></script>
+  <!-- <script src="https://www.googletagmanager.com/gtag/js?id=G-B491L0Y23W" defer></script>
 <script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-B491L0Y23W');
-</script>
+</script> -->
 <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -164,11 +164,11 @@ html {scroll-behavior: smooth;}@font-face{font-family:Blanka;src:url('https://aa
     </nav>
     <div class="main-container">
       <section class="hero" id="home">
-        <div class="hvideos lozad" id="v1" data-background-image="images/hero-3.jpeg">
+        <div class="hvideos lozad" id="v1" data-background-image="images/hero-3.webp">
           <!-- <img src="images/hero-3.jpeg" alt=""> -->
         </div>
         
-        <div class="hvideos lozad" id="v2" data-background-image="images/hero-4.jpeg">
+        <div class="hvideos lozad" id="v2" data-background-image="images/hero-4.webp">
           <!-- <img src="images/hero-4.jpeg" alt=""> -->
         </div>
         
